crates/shipper-state/src/snapshots/shipper_state__tests__error_msg_corrupted_receipt_json.snap
---
source: crates/shipper-state/src/lib.rs
expression: "normalize_error(&format!(\"{err:#}\"), state_dir)"
---
failed to parse receipt JSON <STATE_DIR>/receipt.json: expected ident at line 1 column 2
