crates/shipper-state/src/snapshots/shipper_state__tests__error_msg_empty_state_file.snap
---
source: crates/shipper-state/src/lib.rs
expression: "normalize_error(&format!(\"{err:#}\"), state_dir)"
---
failed to parse state JSON <STATE_DIR>\state.json: EOF while parsing a value at line 1 column 0
