crates/shipper-state/src/snapshots/shipper_state__tests__error_msg_receipt_version_too_old.snap
---
source: crates/shipper-state/src/lib.rs
expression: err.to_string()
---
receipt version shipper.receipt.v0 is too old. Minimum supported version is shipper.receipt.v1
