crates/shipper-state/src/snapshots/shipper_state__tests__error_msg_truncated_state_json.snap
---
source: crates/shipper-state/src/lib.rs
expression: "normalize_error(&format!(\"{err:#}\"), state_dir)"
---
failed to parse state JSON <STATE_DIR>/state.json: EOF while parsing an object at line 1 column 17
